--- a/server-render/views/random-props.ejs
+++ b/server-render/views/random-props.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>React 服务端渲染－ renderToString()</title>
+    <title>React 服务端渲染</title>
   </head>
   <body>
     <!-- 挂载React组件 -->
